<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/transparent"
tools:context=".MainActivity">

<ImageView
    android:id="@+id/backgroundImage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerCrop"
    android:src="@drawable/day" />


    <LinearLayout
        android:id="@+id/newLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/transparent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/TextView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:fontFamily="cursive"
                    android:textStyle="bold"
                    android:textSize="50sp"
                    android:paddingStart="45dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:ignore="RtlSymmetry" />
                <Switch
                    android:id="@+id/dayNightSwitch"
                    android:scaleY="1.75"
                    android:scaleX="1.75"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:weightSum="5">
                <TextView
                    android:id="@+id/TextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="25sp"
                    android:fontFamily="monospace"
                    android:textColor="@color/black"
                    android:layout_marginStart="5dp"
                    android:textFontWeight="15"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:weightSum="5">
                <TextView
                    android:id="@+id/TextView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textSize="35sp"
                    android:fontFamily="monospace"
                    android:textColor="@color/black"
                    android:layout_marginStart="5dp"
                    android:textFontWeight="15"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="6dp"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/TextView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sloc"
                        android:textColor="@color/black"/>
                    <TextView
                        android:id="@+id/TextView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Latitude"
                        android:textColor="@color/black"/>
                    <TextView
                        android:id="@+id/TextView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Longitude"

                        android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/TextView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tmp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="5dp"
                    android:textSize="80sp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:src="@drawable/moon"
                    android:layout_gravity="center"
                    android:contentDescription="TODO" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">
                    <TextView
                        android:id="@+id/TextView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/hour1"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/TextView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/hour2"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/TextView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/hour3"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/TextView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/hour4"
                        android:textColor="@color/black"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

